Xcomp crash with PopSynchronousTest

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs21
    • Affects Version/s: hs21
    • Component/s: hotspot
    • None
    • b12
    • x86
    • solaris_10
    • Verified

        In the fix for 7009361 I added some logic in deoptimization to adjust interpreted callers by the size of the signature at the call site instead of the size of the callee since they can be different in the presence of invokedynamic. In our current system things functioned ok without because we tends to leave a lot of extra space on the stack. There was a bug in the code I added with reduced the value to either 0 or 1 which caused problems in rare cases. The fix is to correct the grouping to return the proper answer.
        The failing test was:
          
          com/sun/jdi/PopSynchronousTest

              Assignee:
              Tom Rodriguez
              Reporter:
              Tom Rodriguez
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: