7042052: Xcomp crash with PopSynchronousTest

Reviewed-by: kvn, iveresov